// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine:exact basic create node: bazMd 1`] = `
Object {
  "content": "baz.body
",
  "data": Object {
    "desc": "",
    "id": "baz",
    "title": "baz",
  },
  "excerpt": "",
  "isEmpty": false,
}
`;

exports[`engine:exact basic create node: bazNode 1`] = `
Object {
  "body": "baz.body",
  "children": Array [],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "id": "baz",
  "parent": "root",
  "stub": false,
  "title": "baz",
  "type": "note",
}
`;

exports[`engine:exact basic create when empty: notes 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
]
`;

exports[`engine:exact basic create when empty: notes-root-content 1`] = `
"
"
`;

exports[`engine:exact basic create when empty: notes-root-data 1`] = `
Object {
  "desc": "",
  "title": "root",
}
`;

exports[`engine:exact basic create when empty: schemas 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root.schema",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "schema",
  },
]
`;

exports[`engine:exact basic fetch node with custom att 1`] = `
Object {
  "body": "",
  "children": Array [],
  "created": 123,
  "custom": Object {
    "bond": 42,
  },
  "data": Object {},
  "desc": "",
  "fname": "foo.one",
  "id": "foo.one",
  "parent": "foo",
  "stub": false,
  "title": "foo.one",
  "type": "note",
  "updated": 456,
}
`;

exports[`engine:exact basic fetch node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
]
`;

exports[`engine:exact basic updateNode: bazNote 1`] = `
Object {
  "body": "",
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "stub": false,
  "title": "baz",
  "type": "note",
}
`;

exports[`engine:exact basic updateNode: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
]
`;

exports[`engine:exact basic: schema init: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
      "test1",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root.schema",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "one",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema",
    "parent": "bar",
    "stub": false,
    "title": "one",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema",
    "parent": "one",
    "stub": false,
    "title": "alpha",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema",
    "parent": "bar",
    "stub": false,
    "title": "three",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "one",
      "three",
    ],
    "custom": Object {},
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "foo.schema",
    "parent": "root",
    "stub": false,
    "title": "bar",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "test1-1",
      "test1-2",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "test1.schema",
    "parent": "root",
    "stub": false,
    "title": "test1",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "test1-1-1",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "test1.schema",
    "parent": "test1",
    "stub": false,
    "title": "test1-1",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "test1.schema",
    "parent": "test1-1",
    "stub": false,
    "title": "test1-1-1",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "test1.schema",
    "parent": "test1",
    "stub": false,
    "title": "test1-2",
    "type": "schema",
  },
]
`;

exports[`engine:exact edge md exist, no schema file: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.three.alpha.md",
  "foo.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact edge md exist, no schema file: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
]
`;

exports[`engine:exact edge no md file, no schema : listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.three.alpha.md",
  "foo.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact edge no md file, no schema : main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
]
`;

exports[`engine:exact edge no md file, schema exist: fooNote 1`] = `
Object {
  "body": "",
  "children": Array [
    "foo.one",
    "foo.two",
    "three",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact edge no md file, schema exist: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact edge no md file, schema exist: main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
]
`;

exports[`engine:exact edge note without fm: fooNote 1`] = `
Object {
  "body": "this is foo",
  "children": Array [
    "foo.one",
    "foo.two",
    "three",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact edge note without id: fooNote 1`] = `
Object {
  "body": "this is foo
",
  "children": Array [
    "foo.one",
    "foo.two",
    "three",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact main delete node with children: listDi2 1`] = `
Array [
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact main delete node with children: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "foo",
    "type": "note",
  },
]
`;

exports[`engine:exact main delete node with children: main2 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "foo",
    "type": "note",
  },
]
`;

exports[`engine:exact main open stub node: listDir 1`] = `
Array [
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact main open stub node: listDir2 1`] = `
Array [
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact main open stub node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "three",
    "type": "note",
  },
  Object {
    "body": "bar.two.body
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.two",
    "parent": "bar",
    "stub": false,
    "title": "two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "three",
    "stub": false,
    "title": "alpha",
    "type": "note",
  },
]
`;
